Resolved image alignment issue in campaign grid view.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3473,3 +3473,10 @@ h5.oliver-heading-color{
 .section-column:hover {
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1) !important;
 }
+.gridViewImgBg .grid-icon-img,.grid-icon-img{
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  display: block;
+  margin: 10px auto;
+}
